una version de el hypeblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Pepito Perez Blogs</title>
+        <title>Pepito Perez Blogs 2.0 return of sahara</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
